--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -59,7 +59,7 @@
                       </div>
                       <strong>Durée :</strong> {{ service.duree }} minutes
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" *ngIf="service.dateFin">
                       <div class="badge badge-circle badge-success mr-3">
                         <i class="fa fa-calendar-alt"></i>
                       </div>
@@ -72,19 +72,31 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="row">
-                    <div class="col-md-12">
-                      <h5>no employe disponible</h5>
-                      <div class="row">
-                        <div class="col-md-3" *ngFor="let employe of employes; let i = index">
-                          <img src="./assets/img/theme/team-1-800x800.jpg"
-                            class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-                          <div class="pt-4 text-center">
-                            <input type="checkbox" class="form-control" (click)="getIndispoDate(employe._id)"><span
-                              class="d-block mb-1">{{ employe.nom }} {{ employe.prenom }}</span>
-                          </div>
-                        </div>
+                  <div class="row" *ngIf="fav.length != 0">
+                    <h6>vos vos favoris disponible</h6>
+                    <div class="col-md-2" *ngFor="let employe of fav; let i = index">
+                      <img src="./assets/img/theme/team-1-800x800.jpg"
+                        class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+                      <div class="pt-4 text-center">
+                        <input type="radio" name="emp" class="form-control" (click)="getIndispoDate(employe._id)"><span
+                          class="d-block mb-1">{{ employe.nom }} {{ employe.prenom }}</span>
                       </div>
+                    </div>
+                  </div>
+                  <div class="row" *ngIf="employes.length != 0">
+                    <h6>no employe disponible</h6>
+                    <div class="col-md-2" *ngFor="let employe of employes; let i = index">
+                      <img src="./assets/img/theme/team-1-800x800.jpg"
+                        class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+                      <div class="pt-4 text-center">
+                        <input type="radio" name="emp" class="form-control" (click)="getIndispoDate(employe._id)"><span
+                          class="d-block mb-1">{{ employe.nom }} {{ employe.prenom }}</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row text-center" *ngIf="employes.length == 0">
+                    <div class="col-md-12 text-center">
+                      <h6>nous somme desole, aucun employe disponible pour ce service en ce moment.</h6>
                     </div>
                   </div>
                   <div *ngIf="showCalendar" id='calendar-container'>
@@ -104,7 +116,7 @@
                               cursor: pointer;
                               margin-bottom: 5px;
                             }
-    
+
                             .fc-event:hover {
                               background-color: #296cad;
                             }
@@ -117,7 +129,7 @@
                     </div>
                   </div>
                 </div>
-                <div class='row'>
+                <div class='row' *ngIf="nouvelIntervalDebut">
                   <div class='col-md-12 text-center mt-4'>
                     <a href="javascript:void(0)" class="btn btn-warning" (click)="open(classic, '', '')">Prendre
                       rendez-vous</a>
@@ -237,7 +249,8 @@
                 <ng-template #classic let-c="close" let-d="dismiss">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h6 class="modal-title" id="modal-title-default">finalisation de payement pour un render-vous le {{nouvelIntervalDebut}}</h6>
+                      <h6 class="modal-title" id="modal-title-default">finalisation de payement pour un render-vous le
+                        {{nouvelIntervalDebut}}</h6>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                         (click)="d('Cross click')">
                         <span aria-hidden="true">×</span>
@@ -283,7 +296,8 @@
                                   </div>
                                 </div>
                                 <div class="px-5 pay">
-                                  <button class="btn btn-warning btn-block" (click)="confirmeRDV()">paye {{ service.prix }} Ar</button>
+                                  <button class="btn btn-warning btn-block" (click)="confirmeRDV()">paye {{ service.prix
+                                    }} Ar</button>
                                 </div>
                               </div>
                             </div>
