--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -25,57 +25,42 @@
           </div>
         </div>
       </div>
-      <!-- <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
+      <ul class="navbar-nav navbar-nav-hover align-items-lg-center" *ngIf="isLoggedIn">
         <li class="nav-item dropdown">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button">
+          <a class="nav-link no-caret" data-toggle="dropdown" role="button" (mouseenter)="chargeHisto()">
             <i class="ni ni-ui-04 d-lg-none"></i>
-            <span class="nav-link-inner--text">Components</span>
+            <span class="nav-link-inner--text">Historique de rendez-vous</span>
           </a>
-          <div class="dropdown-menu-xl dropdown-menu" >
+          <div class="dropdown-menu dropdown-menu-xl dropdown-menu-arrow" style="max-height: 400px; overflow-y: auto;">
             <div class="dropdown-menu-inner">
-              <a routerLinkActive="active" [routerLink]="['documentation/tutorial']" class="media d-flex align-items-center">
-                <div class="icon icon-shape bg-gradient-primary rounded-circle text-white">
-                  <i class="ni ni-spaceship"></i>
-                </div>
+              <a class="media d-flex align-items-center" *ngFor="let histor of histo">
                 <div class="media-body ml-3">
-                  <h6 class="heading text-primary mb-md-1">Getting started</h6>
-                  <p class="description d-none d-md-inline-block mb-0">Learn how to use Argon compiling Scss, change brand colors and more.</p>
+                  <h6 class="heading text-primary mb-md-1">{{ histor.serviceId.nom }}</h6>
+                  <p class="description d-none d-md-inline-block mb-0">
+                    date : {{ histor.date | date:'dd/MM/yyyy HH:mm' }}
+                    <br>
+                    responsable : {{ histor.employeID.nom }}
+                  </p>
                 </div>
-              </a>
-              <a routerLinkActive="active" [routerLink]="['documentation/colors']" class="media d-flex align-items-center">
-                <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
-                  <i class="ni ni-palette"></i>
-                </div>
-                <div class="media-body ml-3">
-                  <h6 class="heading text-primary mb-md-1">Foundation</h6>
-                  <p class="description d-none d-md-inline-block mb-0">Learn more about colors, typography, icons and the grid system we used for Argon.</p>
-                </div>
-              </a>
-              <a routerLinkActive="active" [routerLink]="['documentation/alerts']" class="media d-flex align-items-center">
-                <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
-                  <i class="ni ni-ui-04"></i>
-                </div>
-                <div class="media-body ml-3">
-                  <h5 class="heading text-warning mb-md-1">Components</h5>
-                  <p class="description d-none d-md-inline-block mb-0">Browse our 50 beautiful handcrafted components offered in the Free version.</p>
+                <div class="">
+                  <button style="border: none;" class="badge badge-pill badge-success text-uppercase" *ngIf="toDate(histor.date) <= toDate(dateActuelle)">
+                    termine
+                  </button>
+                  <button style="border: none;" class="badge badge-pill badge-primary text-uppercase" *ngIf="histor.etat === false">
+                    annule
+                  </button>
+                  <button style="border: none;cursor: pointer;" class="badge badge-pill badge-danger text-uppercase" *ngIf="histor.etat === true && toDate(histor.date) > toDate(dateActuelle)" (click)="annuler(histor._id)">
+                    annule
+                  </button>
+                  
+                  
                 </div>
               </a>
             </div>
           </div>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link no-caret" data-toggle="dropdown" role="button">
-            <i class="ni ni-collection d-lg-none"></i>
-            <span class="nav-link-inner--text">Examples</span>
-          </a>
-          <div class="dropdown-menu">
-            <a [routerLink]="['/landing']" class="dropdown-item">Landing</a>
-            <a [routerLink]="['/user-profile']" class="dropdown-item">Profile</a>
-            <a [routerLink]="['/login']" class="dropdown-item">Login</a>
-            <a [routerLink]="['/register']" class="dropdown-item">Register</a>
-          </div>
-        </li>
-      </ul> -->
+      </ul>
+      
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://www.facebook.com/boraborafootspa" target="_blank"
