--- a/src/app/manager/navbar-manager/navbar-manager.component.html
+++ b/src/app/manager/navbar-manager/navbar-manager.component.html
@@ -1,5 +1,5 @@
 <nav id="navbar-main"
-  class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-dark bg-default headroom headroom--top headroom--pinned">
+  class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-dark bg-gradient-default headroom headroom--top headroom--pinned">
   <div class="container">
     <a class="navbar-brand mr-lg-5" [routerLink]="['/manager']">
       <img src="./assets/img/brand/BORABORA.png">
