--- a/src/app/manager/home-manager/home-manager.component.html
+++ b/src/app/manager/home-manager/home-manager.component.html
@@ -1,2 +1,18 @@
 <app-navbar-manager></app-navbar-manager>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-lg-6">
+          <canvas id="pieChart"></canvas>
+        </div>
+        <div class="col-lg-6">
+          <canvas id="barChart"></canvas>
+        </div>
+      </div>
+</div>
+
