--- a/src/app/profile-utilisateur/profile.component.html
+++ b/src/app/profile-utilisateur/profile.component.html
@@ -103,7 +103,7 @@
             </ng-template>
           </div>
 
-          <div class="mt-5 py-5 border-top text-center">
+          <div class="mt-5 py-5 border-top text-center" *ngIf="role == 1">
             <div class="row justify-content-center">
               <div class="col-lg-9">
                 <h6>Mes employer favorie <button class="btn btn-sm btn-icon btn-primary" (click)="open(fav, 'Notification', 'sm')">
