--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,10 @@
 <nav id="navbar-main"
   class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
   <div class="container">
-    <a class="navbar-brand mr-lg-5" [routerLink]="['/home-client']" *ngif="role===1">
+    <a class="navbar-brand mr-lg-5" [routerLink]="['/home-client']" *ngIf="role=='1'">
+      <img src="./assets/img/brand/BORABORA.png">
+    </a>
+    <a class="navbar-brand mr-lg-5" [routerLink]="['/home-employe']" *ngIf="role=='2'">
       <img src="./assets/img/brand/BORABORA.png">
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
@@ -12,7 +15,10 @@
       <div class="navbar-collapse-header">
         <div class="row">
           <div class="col-6 collapse-brand">
-            <a [routerLink]="['/home-client']" *ngif="role===1">
+            <a [routerLink]="['/home-client']" *ngIf="role=='1'">
+              <img src="./assets/img/brand/logo.png">
+            </a>
+            <a [routerLink]="['/home-employe']" *ngIf="role=='2'">
               <img src="./assets/img/brand/logo.png">
             </a>
           </div>
@@ -43,7 +49,7 @@
                   </p>
                 </div>
                 <div class="">
-                  <button style="border: none;" class="badge badge-pill badge-success text-uppercase" *ngIf="toDate(histor.date) <= toDate(dateActuelle)">
+                  <button style="border: none;" class="badge badge-pill badge-success text-uppercase" *ngIf="toDate(histor.date) <= toDate(dateActuelle) && histor.etat === true">
                     termine
                   </button>
                   <button style="border: none;" class="badge badge-pill badge-primary text-uppercase" *ngIf="histor.etat === false">
