--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -37,7 +37,7 @@
   <div class="position-relative">
     <!-- shape Hero -->
     <section class="section section-lg section-shaped pb-250"
-      style="background-image: url('./assets/img/theme/2.png');">
+      style="background-image: url('./assets/img/theme/produit2.jpg'); background-size: cover;">
       <div class="shape shape-style-1 shape-default">
         <span></span>
         <span></span>
