--- a/src/app/detail-service/landing.component.html
+++ b/src/app/detail-service/landing.component.html
@@ -105,7 +105,7 @@
                     </div>
                   </div>
                   <hr>
-                  <div class="row" *ngIf="fav.length != 0">
+                  <!-- <div class="row" *ngIf="fav.length != 0">
                     <h6>vos vos favoris disponible</h6>
                     <div class="col-md-2" *ngFor="let employe of fav; let i = index">
                       <img src="./assets/img/theme/team-1-800x800.jpg"
@@ -115,7 +115,7 @@
                           class="d-block mb-1">{{ employe.nom }} {{ employe.prenom }}</span>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="row d-flex justify-content-around" *ngIf="employes.length != 0">
                     <div class="col-lg-12 text-center">
                       <h6>no employe disponible</h6>
